# backend/models/UserModel.js
@@ -1,5 +1,4 @@
-// User entity
-
+// User entity - Your UserModel.js should look like this now
 module.exports = (sequelize, DataTypes) => {
   const Users = sequelize.define(
     "Users",
@@ -13,16 +12,49 @@ module.exports = (sequelize, DataTypes) => {
       username: {
         type: DataTypes.STRING,
         allowNull: false,
+        unique: true,
       },
       password: {
         type: DataTypes.STRING,
         allowNull: false,
       },
-      // email: {
-      //   type: DataTypes.STRING,
-      //   allowNull: false,
-      //   unique: true,
-      // },
+      email: {
+        type: DataTypes.STRING,
+        allowNull: false,
+        unique: true,
+        validate: {
+          isEmail: true,
+        },
+      },
+      fullName: {
+        type: DataTypes.STRING,
+        allowNull: true,
+      },
+      gender: {
+        type: DataTypes.ENUM("male", "female"),
+        allowNull: true,
+      },
+      phoneNumber: {
+        type: DataTypes.STRING,
+        allowNull: true,
+        unique: true,
+      },
+      dateOfBirth: {
+        type: DataTypes.DATEONLY,
+        allowNull: true,
+      },
+      occupation: {
+        type: DataTypes.STRING,
+        allowNull: true,
+      },
+      preferredLanguage: {
+        type: DataTypes.STRING,
+        allowNull: true,
+      },
+      profilePicture: {
+        type: DataTypes.STRING, // To store the file path/URL
+        allowNull: true,
+      },
     },
     {
       charset: "utf8",
@@ -31,7 +63,6 @@ module.exports = (sequelize, DataTypes) => {
     }
   );
 
-  // setup any foreign keys with other tables
   Users.associate = (db) => {
     Users.hasMany(db.Posts, {
       foreignKey: "userid",
